src/snapshots/funky__tests__sum_loop.wasm.snap
---
source: src/tests.rs
expression: "format!(\"{:#?}\", engine)"
---
Engine {
    module: RefCell {
        value: ModuleInstance {
            start: 0,
            code: [
                FunctionBody {
                    locals: [],
                    code: [
                        Num(
                            OP_I32_CONST(
                                6,
                            ),
                        ),
                    ],
                },
            ],
            fn_types: [
                FunctionSignature {
                    param_types: [],
                    return_types: [
                        I32,
                    ],
                },
            ],
            funcaddrs: [
                0,
            ],
            tableaddrs: [],
            memaddrs: [
                0,
            ],
            globaladdrs: [],
            exports: [
                ExportInstance {
                    name: "memory",
                    value: Memory {
                        ty: 0,
                    },
                },
                ExportInstance {
                    name: "my_loop",
                    value: Function {
                        ty: 0,
                    },
                },
            ],
        },
    },
    started: false,
    store: Store {
        funcs: [
            FuncInstance {
                ty: FunctionSignature {
                    param_types: [],
                    return_types: [
                        I32,
                    ],
                },
                module: (Weak),
                code: FunctionBody {
                    locals: [],
                    code: [
                        Num(
                            OP_I32_CONST(
                                6,
                            ),
                        ),
                    ],
                },
            },
        ],
        tables: [],
        memory: [
            MemoryInstance {
                data (only length): 1114112,
                max: None,
            },
        ],
        stack: [],
        globals: [],
    },
}
