src/snapshots/funky__tests__wasm-table.wasm.snap
---
source: src/tests.rs
expression: "format!(\"{:#?}\", engine)"
---
Engine {
    module: RefCell {
        value: ModuleInstance {
            start: 0,
            code: [
                FunctionBody {
                    locals: [],
                    code: [
                        Num(
                            OP_I32_CONST(
                                42,
                            ),
                        ),
                    ],
                },
                FunctionBody {
                    locals: [],
                    code: [
                        Num(
                            OP_I32_CONST(
                                13,
                            ),
                        ),
                    ],
                },
                FunctionBody {
                    locals: [],
                    code: [
                        Var(
                            OP_LOCAL_GET(
                                0,
                            ),
                        ),
                        Ctrl(
                            OP_CALL_INDIRECT(
                                1,
                            ),
                        ),
                    ],
                },
            ],
            fn_types: [
                FunctionSignature {
                    param_types: [],
                    return_types: [
                        I32,
                    ],
                },
                FunctionSignature {
                    param_types: [],
                    return_types: [
                        I32,
                    ],
                },
                FunctionSignature {
                    param_types: [
                        I32,
                    ],
                    return_types: [
                        I32,
                    ],
                },
            ],
            funcaddrs: [
                0,
                1,
                2,
            ],
            tableaddrs: [
                0,
            ],
            memaddrs: [],
            globaladdrs: [],
            exports: [
                ExportInstance {
                    name: "callByIndex",
                    value: Function {
                        ty: 2,
                    },
                },
            ],
        },
    },
    started: false,
    store: Store {
        funcs: [
            FuncInstance {
                ty: FunctionSignature {
                    param_types: [],
                    return_types: [
                        I32,
                    ],
                },
                module: (Weak),
                code: FunctionBody {
                    locals: [],
                    code: [
                        Num(
                            OP_I32_CONST(
                                42,
                            ),
                        ),
                    ],
                },
            },
            FuncInstance {
                ty: FunctionSignature {
                    param_types: [],
                    return_types: [
                        I32,
                    ],
                },
                module: (Weak),
                code: FunctionBody {
                    locals: [],
                    code: [
                        Num(
                            OP_I32_CONST(
                                13,
                            ),
                        ),
                    ],
                },
            },
            FuncInstance {
                ty: FunctionSignature {
                    param_types: [
                        I32,
                    ],
                    return_types: [
                        I32,
                    ],
                },
                module: (Weak),
                code: FunctionBody {
                    locals: [],
                    code: [
                        Var(
                            OP_LOCAL_GET(
                                0,
                            ),
                        ),
                        Ctrl(
                            OP_CALL_INDIRECT(
                                1,
                            ),
                        ),
                    ],
                },
            },
        ],
        tables: [
            TableInstance {
                elem: [
                    None,
                    None,
                ],
                max: None,
            },
        ],
        memory: [],
        stack: [],
        globals: [],
    },
}
